fixing visibility toggle css

--- a/source/stylesheets/pixie/_editor_base.sass
+++ b/source/stylesheets/pixie/_editor_base.sass
@@ -7,8 +7,12 @@ html, body
   min-height: 100%
   padding: 0
 
+ul
+  padding-left: 0
+
 li
   list-style: none
+  padding-left: 0
 
 /* TODO: Clean up and remove a bunch of this
 #fullscreen
